--- a/E3SM_var.tex
+++ b/E3SM_var.tex
@@ -201,11 +201,11 @@ Beyond the interactions within seasons, the impact of sub-seasonal variability f
 
 In Global Climate Models (GCMs), their performance at simulating sub-seasonal variability has been demonstrably poorer than other aspects of the tropics on longer timescales, such as for ENSO and the Inter-tropical Convergence Zone (ITCZ). Models have consistently failed to simulate much of the observed sub-seasonal variability, with common biases being a too early peak in the diurnal cycle of precipitation over land \citep{Dirmeyer2012} a PDF of precipitation that includes excessive drizzling \citep{Stephens2010} and a weak or completely absent MJO \citep{Lin2006}. Biases in these and other phenomena will clearly have up-scale implications for the seasonal and mean climate in GCMs. A striking aspect of the MJO in models is their strong dependence on both coupling and initialized versus climate configuration. These dependencies varied widely across CMIP5 models. For a coherent set of experiments, the climate configurations produce generally poor features \citep{Jiang2015}, but this does not necessarily reflect the skill seen in the same models when they are initialized in hindcasts \citep{Xavier2015}. The reverse can also be true and the Community Atmosphere Model (CAM) is a good example of a model that cannot support an MJO event in climate mode \citep{Neale2013}, but is able to maintain events in initialized mode \citep{Xie2012}. This is an important characteristic to understand in the initialized forecast realm, as the MJO provides extended extra-tropical predictability beyond the traditional two week time frame \citep{Jones2011}, through tropical-extratropical communication \citep{Garfinkel2014}.
 
-Understanding the weakness of climate models in simulating sub-seasonal variability and determining what is needed to improve their skill has long been a challenge \citep{Zhang2013}. Central to the processes that determine sub-seasonal variability in the tropics is atmospheric deep convection. Missing processes and sensitivities in the representation of deep convection are thought responsible for shortcomings in the simulation of variability \citep{Kim2014}. A major problem with the parameterization of deep convection is its over-sensitivity to surface properties, particularly over land, and its low sensitivity to tropospheric dry regions. These characteristics have a direct impact on the common sub-seasonal variability model biases: the diurnal cycle is too responsive to surface forcings and destabilizes too early \citep{Yuan2013}, the PDF of precipitation is not restricted by a dry troposphere and has too few no-rainfall days \citep{Hirota2014}, and the MJO convection consumes convective energy too readily and is unable to slowly build convective energy as part of a moisture mode \citep{Kim2014}. Recent enhancements to moisture sensitivity in convective parameterizations in different modeling groups, primarily through entrainment augmentation, have led to demonstrable improvements to many of these sub-seasonal variability phenomena \citep[e.g.,][]{Neale2008,Zhou2012,Tokioka1988,Oueslati2013}. As with many other characteristics, increases in resolution may positively impact sub-seasonal variability biases. Significant improvements to the MJO have been seen in response to increases in vertical resolution \citep{Inness2001a}, and these can be attributable to better resolved stable layers, mimicking a similar enhanced sensitivity to humidity seen with other deep convection changes. Increasing horizontal resolution has mixed results \citep[e.g.,][]{Jia2008} and is more often related to whether explicit is parameterized or explicit \citep{Holloway2013}.
+Understanding the weakness of climate models in simulating sub-seasonal variability and determining what is needed to improve their skill has long been a challenge \citep{Zhang2013}. Central to the processes that determine sub-seasonal variability in the tropics is atmospheric deep convection. Missing processes and sensitivities in the representation of deep convection are thought responsible for shortcomings in the simulation of variability \citep{Kim2014}. A major problem with the parameterization of deep convection is its over-sensitivity to surface properties, particularly over land, and its low sensitivity to tropospheric dry regions. These characteristics have a direct impact on the common sub-seasonal variability model biases: the diurnal cycle is too responsive to surface forcings and destabilizes too early \citep{Yuan2013}, the PDF of precipitation is not restricted by a dry troposphere and has too few no-rainfall days \citep{Hirota2014}, and the MJO convection consumes convective energy too readily and is unable to slowly build convective energy as part of a moisture mode \citep{Kim2014}. Recent enhancements to moisture sensitivity in convective parameterizations in different modeling groups, primarily through entrainment augmentation, have led to demonstrable improvements to many of these sub-seasonal variability phenomena \citep[e.g.,][]{Neale2008,Zhou2012,Tokioka1988,Oueslati2013}. As with many other characteristics, increases in resolution may positively impact sub-seasonal variability biases. Significant improvements to the MJO have been seen in response to increases in vertical resolution \citep{Inness2001a}, and these can be attributable to better resolved stable layers, mimicking a similar enhanced sensitivity to humidity seen with other deep convection changes. Increasing horizontal resolution has mixed results \citep[e.g.,][]{Jia2008} and is more often related to whether deep convection is parameterized or explicit \citep{Holloway2013}.
 
 We aim to document the characteristics of sub-seasonal variability in the Energy Exascale Earth System Model, version1 (E3SM) and contrast behavior with the NCAR Community Earth System Model, version 1 (CESM1), the starting point for E3SM development. Significant changes have been made to the representation of atmospheric processes and model resolution that will be relevant to tropical sub-seasonal variability. Therefore, there is a reasonable expectation that changes will have occurred during the development process.
 
-We describe model configurations and simulations in Chapter \ref{sec:model} and present the baseline sub-seasonal variability characteristics in Chapter \ref{sec:mean_var}, including daily frequencies and diurnal variations. Chapter \ref{sec:waves} outlines the behavior of equatorially trapped models of variability with a more focused analysis of the MJO. We compare the atmosphere-only versus coupling responses in Chapter \ref{sec:coupling}. To understand the dependency on model configuration changes in E3SM, we examine sensitivity experiments in Chapter \ref{sec:sensitivity}. Discussion and conclusions of model performance sill be summarized in Chapter \ref{sec:conclusions}.
+We describe model configurations and simulations in Chapter \ref{sec:model} and present the baseline sub-seasonal variability characteristics in Chapter \ref{sec:mean_var}, including daily frequencies and diurnal variations. Chapter \ref{sec:waves} outlines the behavior of equatorially trapped modes of variability with a more focused analysis of the MJO. We compare the atmosphere-only versus coupling responses in Chapter \ref{sec:coupling}. To understand the dependency on model configuration changes in E3SM, we examine sensitivity experiments in Chapter \ref{sec:sensitivity}. Discussion and conclusions of model performance sill be summarized in Chapter \ref{sec:conclusions}.
 
 
 
